--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "cmdk": "^0.2.0",
     "drizzle-orm": "^0.28.5",
     "lucide-react": "^0.287.0",
-    "next": "^13.5.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest",
     "superjson": "^1.13.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
@@ -54,7 +54,7 @@
     "dotenv-cli": "^7.3.0",
     "drizzle-kit": "^0.19.13",
     "eslint": "^8.47.0",
-    "eslint-config-next": "^13.5.4",
+    "eslint-config-next": "latest",
     "mysql2": "^3.6.1",
     "postcss": "^8.4.27",
     "prettier": "^3.0.0",
