--- a/package.json
+++ b/package.json
@@ -11,56 +11,56 @@
     "start": "next start"
   },
   "dependencies": {
-    "@auth/drizzle-adapter": "^0.3.2",
-    "@clerk/nextjs": "^4.24.0",
+    "@auth/drizzle-adapter": "^0.3.17",
+    "@clerk/nextjs": "^4.31.4",
     "@mobily/ts-belt": "^3.13.1",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@planetscale/database": "^1.11.0",
-    "@radix-ui/react-dialog": "^1.0.4",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-navigation-menu": "^1.1.3",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-select": "^2.0.0",
+    "@planetscale/database": "^1.19.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@t3-oss/env-nextjs": "^0.7.0",
-    "@tanstack/react-query": "^4.32.6",
+    "@radix-ui/react-tabs": "^1.1.0",
+    "@t3-oss/env-nextjs": "^0.7.3",
+    "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.37.1",
-    "@trpc/next": "^10.37.1",
+    "@trpc/next": "^10.45.2",
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "cmdk": "^0.2.0",
-    "drizzle-orm": "^0.28.5",
+    "clsx": "^2.1.1",
+    "cmdk": "^0.2.1",
+    "drizzle-orm": "^0.28.6",
     "lucide-react": "^0.287.0",
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "superjson": "^1.13.1",
+    "next": "^14.2.8",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "superjson": "^1.13.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
-    "ts-pattern": "^5.0.5",
-    "zod": "^3.22.4"
+    "ts-pattern": "^5.3.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/eslint": "^8.44.2",
-    "@types/node": "^18.16.0",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.3.0",
-    "@typescript-eslint/parser": "^6.3.0",
-    "autoprefixer": "^10.4.14",
-    "dotenv-cli": "^7.3.0",
+    "@types/eslint": "^8.56.12",
+    "@types/node": "^18.19.50",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "autoprefixer": "^10.4.20",
+    "dotenv-cli": "^7.4.2",
     "drizzle-kit": "^0.19.13",
-    "eslint": "^8.47.0",
-    "eslint-config-next": "latest",
-    "mysql2": "^3.6.1",
-    "postcss": "^8.4.27",
-    "prettier": "^3.0.0",
-    "prettier-plugin-tailwindcss": "^0.5.1",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.1.6"
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.8",
+    "mysql2": "^3.11.0",
+    "postcss": "^8.4.45",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5.5.4"
   },
   "ct3aMetadata": {
     "initVersion": "7.22.0"
