--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^0.3.17",
-    "@clerk/nextjs": "^4.31.4",
     "@mobily/ts-belt": "^3.13.1",
     "@paralleldrive/cuid2": "^2.2.2",
     "@planetscale/database": "^1.19.0",
@@ -23,7 +22,8 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.1.0",
-    "@supabase/supabase-js": "^2.45.3",
+    "@supabase/ssr": "^0.5.1",
+    "@supabase/supabase-js": "^2.45.4",
     "@t3-oss/env-nextjs": "^0.7.3",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.37.1",
@@ -36,6 +36,7 @@
     "drizzle-orm": "^0.28.6",
     "lucide-react": "^0.287.0",
     "next": "^14.2.8",
+    "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "superjson": "^1.13.3",
